# uptrain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  SECURITY.md  _setup.py  docker-compose.yml  get_started.py  get_started_managed.py  get_started_open_source.py  mkdocs.yml  pyproject.toml  requirements.txt  run_uptrain.sh  setup.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-api-docs.yml  readme.yml
docs/: mint.json  mkdocs.yml  package-lock.json  templates
docs/advanced/: chart.mdx  check.mdx  core-idea.mdx  evaluating-using-a-checkset.mdx  operator.mdx
docs/api-reference/: README.md
docs/contributing/: development.mdx  documentation.mdx
docs/dashboard/: evaluations.mdx  getting_started.mdx  project.mdx  prompts.mdx
docs/examples/: deep-dive-examples.mdx  finetuning-llm.md  finetuning-llm.mdx  fraud-detection.mdx  prompt-experiments.mdx  shopping-cart-recommendation.mdx  text-summarization.mdx  validation.mdx
docs/faq/: faq.mdx
docs/getting-started/: concepts.mdx  introduction.mdx  key-concepts.mdx  quickstart.mdx  why-open-source.mdx  why-we-are-building-uptrain.mdx
docs/key-components/: check.mdx  checkset.mdx  core-idea.mdx  evals.mdx  operator.mdx  settings.mdx
docs/key-concepts/: check.mdx  checkset.mdx  core-idea.mdx  experiment.mdx  managed-service.mdx  operator.mdx
docs/llms/: anyscale.mdx  azure.mdx  claude.mdx  mistral.mdx  ollama.mdx  openai.mdx  together_ai.mdx
docs/managed-services/: overview.mdx  pricing.mdx
docs/measurables/: custom.mdx  overview.mdx  predefined.mdx
docs/monitors/: concept-drift.mdx  custom-monitors.mdx  data-drift.mdx  data-integrity.mdx  edge-case-detection.mdx  model-bias.mdx
docs/predefined-evaluations/: code.mdx  context-awareness.mdx  custom.mdx  language-features.mdx  overview.mdx  (+1 more)
examples/: README.md  benchmarking_results.ipynb  compare_embedding_models.ipynb  context_quality_comparison.ipynb  data_driven_experimentation_demo.ipynb  evaluate_conversation_tutorial.ipynb  evaluate_guideline_adherence.ipynb  experiments_evaluation_tutorial.ipynb  llamaindex_integration_tutorial.ipynb  llm_openai_vs_claude_experiment.ipynb  managed_service_client_tutorial.ipynb  open_source_evaluator_tutorial.ipynb  openai_evals_tutorial.ipynb  prompt-experiments.ipynb  prompt_experiments_tutorial.ipynb  test.py  test_validation.py  validation_tutorial.ipynb
i18n/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ru.md  README.ur.md  README.zh-CN.md
oodles/: __init__.py  constants.py
regression_testing/: experiment.py
tests/: test_builtins.py  test_custom_ops.py  test_edge_case_detection.py  test_operators.py
tutorials/: open_source_evaluator_tutorial.ipynb
uptrain/: MANIFEST.in  __init__.py  __init__.pyi  cli.py  concepts.jsonl  constants.py
validation_wrapper/: validation_manager.py
(+1034 files in other folders)
