[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "uptrain"
version = "0.4.7"
description = "UpTrain - tool to evaluate LLM applications on aspects like factual accuracy, response quality, retrieval quality, tonality, etc."
readme = "README.md"
maintainers = [{ name = "UpTrain AI Team", email = "oss@uptrain.ai" }]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["uptrain", "ai", "LLM", "evaluation", "hallucinations", "observability", "response quality"]
dependencies = [
    "pydantic<1.10.10",
    "loguru",
    "lazy_loader",
    "networkx",
    "polars>=0.18",
    "pandas",
    "numpy>=1.23.0",
    "httpx>=0.24.1",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://uptrain.ai"
Repository = "https://github.com/uptrain-ai/uptrain"

[project.scripts]
uptrain-add = "uptrain.cli:main"

[project.optional-dependencies]
# Optional dependencies are installed using the uptrain-cli
test = [
    "pytest>=7.0"
]

[tools.setuptools]
packages = ["uptrain"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyi"]
